  Shinwell, review by Damien Doligez)
- GPR#325: Add v=0x400 flag to OCAMLRUNPARAM to display GC stats on exit (Louis
  Gesbert, review by Alain Frisch)
- GPR#297: Several changes to improve the worst-case GC pause time.
  (Damien Doligez, with help from Leo White and Francois Bobot)
- GPR#384: Fix compilation using old Microsoft C Compilers not supporting secure
  CRT functions (SDK Visual Studio 2005 compiler and earlier)
  (David Allsopp)

Standard library:
- PR#1460, GPR#230: Array.map2, Array.iter2
  (John Christopher McAlpine)
- PR#5197, GPR#63: Arg: allow flags such as --flag=arg as well as --flag arg
  (Richard Jones)
- PR#6017, PR#7034, GPR#267: More efficient ifprintf implementation
  (Jeremy Yallop, review by Gabriel Scherer)
- PR#6296: Some documentation on the floating-point representations
    recognized by Pervasives.float_of_string
  (Xavier Leroy)
- PR#6316: Scanf.scanf failure on %u formats when reading big integers
  (Xavier Leroy, Benoît Vaugon)
- PR#6321: guarantee that "hypot infinity nan = infinity"
  (for conformance with ISO C99)  (Xavier Leroy)
- PR#6390, GPR#36: expose Sys.{int_size,max_wosize} for improved js_of_ocaml
  portability (Hugo Heuzard)
- PR#6449: Add Map.union (Alain Frisch)
* PR#6494: Add equal function in modules
  Bytes, Char, Digest, Int32, Int64, Nativeint, and String
  (Romain Calascibetta)
* PR#6524, GPR#79: Filename: Optional ?perms argument to open_temp_file
  (Daniel Bünzli, review by Jacques-Pascal Deplaix)
* PR#6525, GPR#80: Add Uchar module to the standard library
  (Daniel Bünzli, review by Yoriyuki Yamagata and Damien Doligez)
- PR#6577: improve performance of %L, %l, %n, %S, %C format specifiers
  (Alain Frisch)
- PR#6585: fix memory leak in win32unix/createprocess.c
- PR#6649, GPR#222: accept (int_of_string "+3")
  (Christopher McAlpine)
- PR#6645, GPR#174: Guarantee that Set.add, Set.remove, Set.filter
  return the original set if no change is required (Alain Frisch,
  Mohamed Iguernlala)